styles.css: Changed max-height of .messages to height

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
 .messages {
   overflow: auto;
   width: 100vw;
-  max-height: 100vh;
+  height: 100vh;
   padding: 1rem .9rem;
 }
 .bubble {
