Revert "styles.css: Changed max-height of .messages to height"
This reverts commit 68a49468d41d10147f8be7703d2b8911b40c7ccd.

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
 .messages {
   overflow: auto;
   width: 100vw;
-  height: 100vh;
+  max-height: 100vh;
   padding: 1rem .9rem;
 }
 .bubble {
