--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -1,3 +1,28 @@
+#skip-link {
+	-webkit-box-align: center;
+			-ms-flex-align: center;
+					align-items: center;
+	border-bottom-right-radius: 5px;
+	background-color: #008000;
+	color: #fff;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	height: 50px;
+	-webkit-box-pack: center;
+			-ms-flex-pack: center;
+					justify-content: center;
+	left: 0;
+	padding: 0 15px;
+	position: absolute;
+	top: -50px;
+	z-index: 100;
+
+	&:focus {
+		top: 0;
+	}
+}
+
 #site-nav {
 	-webkit-box-align: center;
 			-ms-flex-align: center;
